<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddCardActivity">

    <EditText
        android:id="@+id/company_name_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:ems="10"
        android:hint="@string/company_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_id_edit_text" />

    <EditText
        android:id="@+id/owner_name_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:ems="10"
        android:hint="@string/owner_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/owner_surname_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:ems="10"
        android:hint="@string/owner_surname_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/owner_name_edit_text" />

    <EditText
        android:id="@+id/client_id_edit_text"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:ems="10"
        android:hint="@string/client_id_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/owner_surname_edit_text" />

    <Button
        android:id="@+id/select_logo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_logo_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/color_spinner"
        app:layout_constraintTop_toTopOf="@+id/color_spinner" />

    <ImageView
        android:id="@+id/add_card_logo_image_view"
        android:layout_width="@dimen/add_card_logo_width"
        android:layout_height="@dimen/add_card_logo_width"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_format_radio_group"
        tools:srcCompat="@drawable/ic_coop" />

    <Spinner
        android:id="@+id/color_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintEnd_toStartOf="@+id/select_logo_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_name_edit_text" />

    <RadioGroup
        android:id="@+id/code_format_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:checkedButton="@id/qrcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_spinner">
        <RadioButton
            android:id="@+id/qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qrcode_text" />
        <RadioButton
            android:id="@+id/barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_text" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>